Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-7190

sanity-lfsck test_18a: FAIL: (6.1) Expect 1 fixed on mds1, but got: 0

XMLWordPrintable

    • 3
    • 9223372036854775807

      sanity-lfsck test 18a failed as follows:

      CMD: shadow-17vm12 /usr/sbin/lctl get_param -n mdd.lustre-MDT0000.lfsck_layout
       sanity-lfsck test_18a: @@@@@@ FAIL: (6.1) Expect 1 fixed on mds1, but got: 0 
      

      Maloo report: https://testing.hpdd.intel.com/test_sets/bf6d7fc0-5a65-11e5-9147-5254006e85c2

            yong.fan nasf (Inactive)
            yujian Jian Yu
            Votes:
            0 Vote for this issue
            Watchers:
            6 Start watching this issue

              Created:
              Updated:
              Resolved: